--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<mybatis.spring.boot.starter.version>1.1.1</mybatis.spring.boot.starter.version>
+		<pagehelper.spring.boot.starter.version>1.1.1</pagehelper.spring.boot.starter.version>
 	</properties>
 
 	<dependencies>
@@ -24,7 +25,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
+
 		<!-- spring-boot热启动 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -44,6 +45,13 @@
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>${mybatis.spring.boot.starter.version}</version>
+		</dependency>
+
+		<!--pagehelper -->
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>${pagehelper.spring.boot.starter.version}</version>
 		</dependency>
 
 	</dependencies>
