--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#datasource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cashier_manager?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=123456
@@ -6,4 +7,8 @@ spring.datasource.max-active=10
 spring.datasource.max-idle=5
 spring.datasource.min-idle=0
 
-
+#pagehelper
+#pagehelper.helperDialect=mysql
+#pagehelper.reasonable=true
+#pagehelper.supportMethodsArguments=true
+#pagehelper.params=count=countSql
