--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=${port:8081}
+
 #datasource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cashier_manager?useUnicode=true&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
@@ -6,6 +8,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-active=10
 spring.datasource.max-idle=5
 spring.datasource.min-idle=0
+mybatis.mapper-locations=classpath*:mybatis/*Mapper.xml
 
 #pagehelper
 #pagehelper.helperDialect=mysql
