--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<java.version>1.8</java.version>
 		<mybatis.spring.boot.starter.version>1.1.1</mybatis.spring.boot.starter.version>
 		<pagehelper.spring.boot.starter.version>1.1.1</pagehelper.spring.boot.starter.version>
+		<druid.spring.boot.starter.version>1.1.2</druid.spring.boot.starter.version>
 	</properties>
 
 	<dependencies>
@@ -38,6 +39,13 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+
+		<!-- druid -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>${druid.spring.boot.starter.version}</version>
 		</dependency>
 
 		<!-- mybatis -->
